FIX Viewer X-Scrollbar
- set viewer-content width
  - init (view-only or both mode)
  - viewer-boundary bar changed

--- a/app/css/coursee-md.css
+++ b/app/css/coursee-md.css
@@ -653,7 +653,9 @@ pre code {
     box-sizing: border-box;
     padding: 0 1em 2em 2em;
     height: 100vh;
+    width: 100vw;
     overflow-y: auto;
+    overflow-x: auto;
 }
 
 #container #viewer:focus,
@@ -697,6 +699,7 @@ pre code {
     left: 50vw;
 }
 #container.viewable.editable #viewer-content{
+    width: 50vw;
     padding-left: 1em;
 }
 #container.viewable.editable #viewer-boundary{
